2003-9-27  Colin McCormack <colin@field.medicine.adelaide.edu.au>
        * lib/httpd.tcl: HTML armour default error output
        * htdocs/admin htdocs/debug htdocs/status:
        added access control .htaccess to direct domains
        to remove some vulnerabilities

2003-9-24  Brent Welch <welch@panasas.com>
        * lib/dirlist.tcl: Security fix to prevent you from listing
        the contents of directories you are not supposed to. It is
        worth noting that you could never fetch a file outside the
        URL tree, but you could list directories.

2003-8-28  Brent Welch <welch@panasas.com>
        * lib/httpd.tcl: Fix in virtual host code suggested by Colin McCormack

2003-8-11  Brent Welch <welch@panasas.com>
        * tclhttpd.spec: Updates from Michael Thomas to create RPMs.
        * bin/httpdthread.tcl: fixed loading of mime.types in installed configuration
        * bin/httpd.tcl: added support for -gui flag to control default Tk gui
        * bin/tclhttpd.rc: added support for -gui flag to control default Tk gui
        * Everything else is cleanup associated with creating RPMs.

2003-6-26  Brent Welch <welch@panasas.com>
        * lib/subst.tcl: fixed Doc_application/x-tcl-auth based on a bug
        filed by Andreas Kupries

2003-5-01  Brent Welch <welch@panasas.com>
        * Removed the precompiled .so files as those cause more
          trouble than they are worth.
        * src/limit.c: added stubs enabled version from Michael Schlenker
        * lib/debug.tcl: add custom library to path used by /debug/source
        * lib/doc.tcl: added Doc_Redirect Doc_RedirectSelf compat aliases

2002-12-02  Brent Welch <welch@panasas.com>
        * Merged the tclhttpd-3-4-rel branch into the trunk.
          tclhttpd-3-4-rel-3 represents the 3.4.3 release and
          the merge point.  This sets the version numbers to
          3.4.3, which isn't strictly correct, but reflects
          the merge.

2002-12-02  Wojciech Kocjan (via Brent Welch)